--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,9 +5,9 @@
 
 
 .bg1{
-    border-bottom: 1px solid rgb(255, 255, 255,0.5);
-    border-right: 1px solid rgb(255, 255, 255,0.5);
-    border-left: 1px solid rgb(255, 255, 255,0.5);
+    border-bottom: 1px solid rgb(255, 255, 255,0.2);
+    border-right: 1px solid rgb(255, 255, 255,0.3);
+    border-left: 1px solid rgb(255, 255, 255,0.3);
     background-color: rgba(0, 0, 0, 0.8); /* Black with 70% transparency */
     
 }
@@ -16,10 +16,10 @@
 }
 .bg{
 
-    border-left: 1px solid rgb(255, 255, 255,0.5);
+    border-left: 1px solid rgb(255, 255, 255,0.3);
 }
 .bg5{
-    border-right: 1px solid rgb(255, 255, 255,0.5);
+    border-right: 1px solid rgb(255, 255, 255,0.3);
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -34,4 +34,7 @@
     top: 0;
  right: 0;
  left: 0;
+}
+.navbar-dark .navbar-nav .nav-link:hover{
+    color: red;
 }
