--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,27 +1,60 @@
-.video{
-    width: 100%;
-    height: 850px;
+.video {
+  width: 100%;
+  height: 850px;
 }
-.pad{
-    padding-left: 1px;
-    padding-right: 1px;
-    height: 100%;
-    width: 100%;
- 
+.pad {
+  padding-left: 1px;
+  padding-right: 1px;
+  height: 100%;
+  width: 100%;
 }
 
-.pad2{
-    position: absolute;
-    top: 150px;
-    color:white;
+.pad2 {
+  position: absolute;
+  top: 190px;
+  color: white;
 }
-.txt2{
-    font-size: large;
-    font-weight: 600;
-    border-bottom: 2px solid red;
-    letter-spacing: 00.01cm;
-    width: 566px;
+.txt2 {
+  font-size: large;
+  font-weight: 600;
+  border-bottom: 2px solid red;
+  letter-spacing: 00.01cm;
+  margin-bottom: 20px;
 }
-.hap{
-    font-size:80px;
+.hap {
+  font-size: 100px;
+  font-weight: 700;
+  display: inline-block; /* Transform ke liye necessary */
+  transform: scale(0.9, 1.2); /* Width kam (X-axis), Height zyada (Y-axis) */
+  letter-spacing: 12px;
+}
+.way {
+  font-size: 70px;
+  line-height: 0.9em;
+ 
+}
+.mar {
+  margin-top: 30px;
+  padding: 13px 30px;
+  background-color: rgb(226, 24, 54);
+  letter-spacing: 0.3cap;
+  font-weight: 600;
+  border: 2px solid #d62027; /* Initially same as background */
+    transition: all 0.3s ease-in-out;
+}
+.mar:hover{
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
+}
+.banner-text {
+  color: transparent;
+  -webkit-text-stroke: 2px white;
+  /* text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff; */
+
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 8px;
+font-weight: bold;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+
 }
