--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,4 +1,4 @@
-/* .video {
+.video {
   width: 100%;
   height: 850px;
 }
@@ -99,6 +99,83 @@ font-weight: bold;
     animation-delay: 1s;
   }
   
+  .about{
+    font-size: 60px;
+    color: black;
+  }
+
+.abouth1{
+  transform: scale(0.8, 1); 
+  font-weight: bold;
+}
+.aboutk{
+  margin-left: 55px;
+  padding: 12px 100px ;
+  background-color: red;
+  margin-top: 15px;
+}
+.aboutl{
+  margin-left: 55px;
+  padding: 14px 50px ;
+  background-color: red;
+  margin-top: 15px;
+  letter-spacing: 0.3cap;
+  border-radius: 0;
+
+}
+.aboutsection{
+  padding: 0 143px 0 74px;
+}
+
+.pare{
+  transform: scale(1.2, 1.2);
+} 
+.kap{
+    width: 60%;
+
+}
+.sercon{
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: rotate(-90deg) translate(-50%, -50%);
+  transform-origin: center;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-weight: bold;
+  padding: 10px 15px;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.mars{
+  margin: 80px 0;
+}
+.klop{
+  margin-top: 250px;
+}
+
+.jop img{
+  width: 100%;
+}
+.img5{
+    height: 407px;
+}
+.img6{
+   height: 407px;
+}
+.img4{
+  height: 814px;
+}
   @keyframes pulseOut {
     0% {
       transform: scale(1);
@@ -108,45 +185,6 @@ font-weight: bold;
       transform: scale(1.5);
       opacity: 0;
     }
-  }
-   */
-
-
-   .hero-section {
-    background: url('') no-repeat center center/cover;
-    text-align: center;
-    color: white;
-    padding: 100px 0;
-  }
-  
-  .hero-btn {
-    background: red;
-    border: none;
-    padding: 10px 20px;
-    font-size: 18px;
-  }
-  
-  .about-section {
-    text-align: left;
-    padding: 50px 0;
-  }
-  
-  .services-section {
-    text-align: center;
-    padding: 50px 0;
-  }
-  
-  .service-box {
-    background: #222;
-    color: white;
-    padding: 30px;
-    margin: 10px;
-    text-align: center;
-  }
-  
-  .contact-section {
-    background: #f8f9fa;
-    padding: 50px 0;
   }
   
 
